# Demand-Forecasting

./: .gitignore  CHANGELOG.md  README.md  models.py  plots.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data/: generate_timeseries.py
src/: cli.py  forecast_arima.py  metrics.py
src/demand_forecasting/: __init__.py  backtest.py  data.py  metrics.py
tests/: test_backtest.py  test_cli_smoke.py  test_data.py  test_forecast_smoke.py  test_generate.py  test_metrics.py  test_models.py
