[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demand-forecasting"
version = "0.2.0"
description = "End-to-end demand forecasting with ARIMA/SARIMA, baselines, and backtesting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amirhossein Honardoust" }]
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "black==24.10.0",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "pandas-stubs==2.2.2.240807",
]

[project.scripts]
demand-forecast = "demand_forecasting.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["statsmodels.*", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["slow: end-to-end tests that fit real SARIMAX models"]
